# caseopener

./: CMakeLists.txt  README.md  build.yml
.github/workflows/: build.yml
assets/fonts/: README.md
assets/sounds/: README.md
src/: Game.cpp  Game.hpp
src/cases/: Case.cpp  Case.hpp  CaseRegistry.cpp  CaseRegistry.hpp
src/core/: AudioManager.cpp  AudioManager.hpp  FreeCaseReward.cpp  FreeCaseReward.hpp  JsonSave.cpp  JsonSave.hpp  PlayerData.cpp  PlayerData.hpp
src/gameplay/: Inventory.cpp  Inventory.hpp  MultiReelManager.cpp  MultiReelManager.hpp  ReelAnimation.cpp  ReelAnimation.hpp  TradeUp.cpp  TradeUp.hpp
src/items/: Item.cpp  Item.hpp  ItemRegistry.cpp  ItemRegistry.hpp  Rarity.hpp  Wear.hpp
src/screens/: GameScreen.cpp  GameScreen.hpp  MenuScreen.cpp  MenuScreen.hpp  Screen.hpp
src/ui/: Button.cpp  Button.hpp  CaseInfoPanel.cpp  CaseInfoPanel.hpp  FreeCaseButton.cpp  FreeCaseButton.hpp  HoverEffect.hpp  InventoryUI.cpp  InventoryUI.hpp  TradeUpUI.cpp  TradeUpUI.hpp
